# ansible-role-spark

./: .ansible-lint  .gitlab-ci.yml  LICENSE  README.md  pyproject.toml  requirements.txt
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/default/: converge.yml  molecule.yml  prepare.yml  verify.yml
tasks/: configuration.yml  directories.yml  install.yml  main.yml  services.yml
templates/env/: spark-env.sh.j2
templates/unit/: spark-master.service.j2  spark-worker.service.j2
tests/: test.yml
