[tool.poetry]
name = "nudorm.spark"
version = "0.1.0"
description = "Ansible role spark"
authors = ["Haydar Ciftci <haydar.ciftci@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
ansible-lint = "^6.14.2"
ansible = "^7.3.0"
molecule = {extras = ["podman"], version = "^4.0.4"}
yamllint = "^1.29.0"
flake8 = "^6.0.0"
pytest-molecule = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
